# safelyx-rust

./: .env.sample  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: tests.yml
src/: lib.rs  safelyx.rs
tests/: mod_test.rs
