[package]
name = "safelyx"
version = "0.1.0"
rust-version = "1.85"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Safelyx <help@safelyx.com>"]
description = "Safelyx Rust SDK"
readme = "README.md"
repository = "https://github.com/safelyx/safelyx-rust"
homepage = "https://safelyx.com"

[lib]
name = "safelyx"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.43", features = ["full"] }
